# ffmpeg-x264-fdkaac

./: README.md  build_all.sh  build_fdkaac.sh  build_fdkaac_all.sh  build_ffmpeg_with_x264_fdkaac.sh  build_ffmpeg_with_x264_fdkaac_all.sh  build_ffmpeg_with_x264_fdkaac_static.sh  build_ffmpeg_with_x264_fdkaac_static_all.sh  build_x264.sh  build_x264_all.sh  config.sh  patchelf
demo/testFFmpegshare/app/: build.gradle
demo/testFFmpegshare/app/src/main/: AndroidManifest.xml
demo/testFFmpegshare/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
demo/testFFmpegshare/app/src/main/cpp/FFDecoder/inc/: SMAudioDecoder.h  SMDecoderError.h
demo/testFFmpegshare/app/src/main/cpp/FFDecoder/src/: FfmpegAudioDecoder.cpp  FfmpegVideoDecoder.cpp  FfmpegVideoDecoder.h  FileProtocol.cpp
demo/testFFmpegshare/app/src/main/java/com/example/testffmpeg/: MainActivity.java
demo/testFFmpegstatic/app/: build.gradle
demo/testFFmpegstatic/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
demo/testFFmpegstatic/app/src/main/cpp/FFDecoder/inc/: FileProtocol.h  IEnDeCrypt.h  IProtocol.h  SMAudioDecoder.h
demo/testFFmpegstatic/app/src/main/cpp/FFDecoder/src/: FfmpegAudioDecoder.cpp  FfmpegAudioDecoder.h  FfmpegVideoDecoder.cpp  FfmpegVideoDecoder.h  SMAudioDecodeCommon.h  SMAudioDecodeType.h  common.h
demo/testFFmpegstatic/gradle/wrapper/: gradle-wrapper.properties
